service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: go-hello-world-service
spec:
  type: NodePort
  ports:
  - name: http
    port: 9090
    targetPort: 3001
  selector:
    app: go-hello-world
